# tmp_use

./: Cargo.toml  README.md  init.sh  start.sh
assets/: index.html
assets/ALG-003/ALG-003_ALG-003_01/ALG-003_ALG-003_01_ALG-003_01_14/: ALG-003_01_14_Exercise.md
assets/ALG-004/ALG-004_ALG-004_01/ALG-004_ALG-004_01_ALG-004_01_14/: ALG-004_01_14_Exercise.md
assets/JPN-001/JPN-001_1024/JPN-001_1024_27/: Exercise.md  Material.md
assets/JPN-001/JPN-001_1024/JPN-001_1024_30/: Exercise.md  Material.md
assets/JPN-001/JPN-001_1024/JPN-001_1024_32/: Exercise.md  Material.md
assets/JPN-001/JPN-001_1025/JPN-001_1025_60/: Exercise.md  Material.md
assets/JPN-001/JPN-001_1026/JPN-001_1026_80/: Exercise.md  Material.md
assets/LIN-001/LIN-001_1024/LIN-001_1024_27/: Exercise.md  Material.md
assets/LIN-001/LIN-001_1024/LIN-001_1024_30/: Exercise.md  Material.md
assets/LIN-001/LIN-001_1024/LIN-001_1024_32/: Exercise.md  Material.md
assets/LIN-001/LIN-001_1025/LIN-001_1025_60/: Exercise.md  Material.md
init_server/: Cargo.toml
init_server/src/: main.rs
init_server/src/server/routes/: display.rs  send_data.rs
init_server/src/tests/: chapter1.md  ferris_the_crab.png:Zone.Identifier
python_file_generator/: convert_dir_to_dict.py  generator.ipynb  init.sh  main.py  parser.py  wrapper.py
src/server/: mod.rs
src/server/routes/: display.rs  mod.rs  send_data.rs
src/tests/: chapter2.md
templates/: from_pyvert.json  from_pyvert.yml  sample1.json  to_rust.yml
wrap_directory/: Cargo.toml
wrap_directory/src/: main.rs
wrap_input/: LIN-003_01_16_Exercise.md
(+19 files in other folders)
